fixing the JS to work on JSFiddle

--- a/game/index.html
+++ b/game/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- 
-<script src="e28week2.js"></script>
+    <script src="e28week2.js" defer></script>
 </head>
 <body>
 
@@ -22,7 +21,8 @@
 <input type="radio" id="scissors" name="selection" value="scissors">
 <label for="scissors">Scissors</label>
 <div>
-<button type="button" onclick="runGame()">Compete!</button>
+<button id="runGame" type="button">Compete!</button>
 </div>
 </body>
 </html>
+  
