--- a/gameVue/index.html
+++ b/gameVue/index.html
@@ -4,6 +4,10 @@
     
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" defer></script>
     <script src="e28week3.js" defer></script>
+    <script type='text/x-template' id='round-details'>
+        
+
+    </script>
     <style>
         [v-cloak] {
             display: none
